syntax = "proto3";
package admin;
option go_package = ".;mall";

import "portal/portal.proto";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";


// 商品分类
message ProductCategoryItem {
  uint64 id = 1;              //
  uint64 parent_id = 2;       // 上级分类的编号：0表示一级分类
  string name = 3;            // 名称
  string icon = 10;           // 图标
}

// 获取首页商品分类
message ProductCategoryListReq {
  uint64 parentId = 1 [(validate.rules).uint64.gte = 0];  // 上级分类的编号：0表示一级分类
}

message ProductCategoryListRsp {
  uint32 code = 1;      // 状态码
  string message = 2;   // 提示信息

  repeated ProductCategoryItem data = 3; // 商品分类
}

// 客户端接口
service PortalHomeApi {
  // 获取首页商品分类
  rpc ProductCategoryList (ProductCategoryListReq) returns (ProductCategoryListRsp) {
    option (google.api.http) = {
      get: "/home/productCateList/{parentId}"
    };
  }
}