syntax = "proto3";
package admin;
option go_package = ".;mall";


import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

// 通用返回
message PortalCommonRsp {
  uint32 code = 1;      // 状态码
  string message = 2;   // 提示信息
}

message ProductCateListReq {
  uint64 parentId = 1; //
}

// 客户端接口
service PortalApi {
  rpc ProductCateList (ProductCateListReq) returns (PortalCommonRsp) {
    option (google.api.http) = {
      get: "/home/productCateList/{parentId}"
    };
  }
}